--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Here it goes</p>
+      <p>I'm 36 and have worked in reinsurance for the past 5+ years.  I'm excited for the challenge ahead.</p>
       <h1>Where I'm From</h1>
       <p>Salina, KS</p>
       <h1>What are your favorite hobbies?</h1>
